improving the project.

--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1094,7 +1094,7 @@ h4 .fa {
     margin-right: 0px;
     font-family: Tahoma;
 }
-.easyWizardSteps li.current {color:#ff8d00}
+.easyWizardSteps li.current {color:#ff8d00;font-size: 1.5em;}
 .easyWizardButtons {overflow:hidden;}
 .easyWizardButtons button, .easyWizardButtons .submit {cursor:pointer}
 .easyWizardButtons .prev {
