improving the project.

--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -145,7 +145,7 @@ a.rm-button-open,
     padding: 20px 40px;
     color: #ffa709;
     font-weight: 500;
-    border-top: 4px double #323b4c;
+    border-top: 4px double #ffa709;
     text-transform: uppercase;
     line-height: 45px;
 	text-shadow: 1px 1px 0 rgba(255,255,255,0.8);
