improving the project.

--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -651,7 +651,7 @@ h4 .fa {
 	outline:none;
 	padding:12px 10px;
 	width:47.66%;
-	background:#fff;
+	background:#f7f5f3;
 	font-size:14px;
 	color:#111;
 	border:2px solid #ff4d00;
