--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -95,7 +95,7 @@ html[xmlns] .slides {display: block;}
 	position: absolute;
     left: 51.3%;
     margin-left: 0;
-    top: 78%;
+    top: 84%;
 }
 .flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; *display: inline;}
 .flex-control-paging li a {
@@ -443,7 +443,7 @@ h5 .fa {
 	line-height: 2em;
 	width: 75%;
 	font-weight : bold;
-	font-family : Courgette;
+	font-family : monospace;
 }
 /*-- //banner-bottom --*/
 /*-- about --*/
@@ -509,6 +509,17 @@ h4 .fa {
     top:78%;
     right:0%;
 }
+
+fieldset {
+	box-shadow: 
+		inset 0 0 0 16px #fff, 
+		inset 0 0 0 17px #ffa709, 
+		inset 0 0 0 18px #fff, 
+		inset 0 0 0 19px #ffa709, 
+		inset 0 0 0 20px #fff, 
+		inset 0 0 0 21px #ffa709;
+}
+
 .about-main fieldset{
 	padding: 2.5em;
     color: #111000;
@@ -518,13 +529,6 @@ h4 .fa {
     margin-bottom: 1em;
     border: 1px solid #ff4d00;
     background: #fdfdfd url(../images/white_paperboard.jpg);
-    box-shadow: 
-		inset 0 0 0 16px #fff, 
-		inset 0 0 0 17px #ffa709, 
-		inset 0 0 0 18px #fff, 
-		inset 0 0 0 19px #ffa709, 
-		inset 0 0 0 20px #fff, 
-		inset 0 0 0 21px #ffa709;
 }
 
 .about-main fieldset div{ 
@@ -537,7 +541,7 @@ h4 .fa {
     border-radius : 10px;
 }
 .about-main fieldset div p{
-    font-size: 0.9em;
+    font-size: 1em;
     font-weight: bold;
     line-height: 1.7em;
 }
@@ -548,10 +552,10 @@ h4 .fa {
 	text-align : right;
 }
 .about-main fieldset p {
-   font-family: Courgette;
-   line-height: 2.2em;
-   font-size: 16px;
-   text-align: justify;
+   font-family: monospace;
+    line-height: 2em;
+    font-size: 16px;
+    text-align: justify;
 }
 
 /*-- //about --*/
@@ -1009,7 +1013,6 @@ h4 .fa {
     position: relative;
     margin: auto;
     margin-bottom: 1em;
-    border: 2px solid #ff4d00;
     text-align: justify;
     font-family: Tahoma;
     background : #fdfdfd;
@@ -1093,7 +1096,7 @@ h4 .fa {
     float: right;
     display: inline-block;
     color: #fff;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 500;
     line-height: 15px;
     position : relative;
