--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1017,8 +1017,13 @@ fieldset {
     text-align: justify;
     font-family: Tahoma;
     background : #fdfdfd;
+    padding-bottom : 3.5em;
 }
 
+#checkout-wizard fieldset > h3 {
+	margin-top: 15px;
+    margin-left: 1px;
+}
 
 .checkout-wizard-content {
     margin-left: auto;
@@ -1039,6 +1044,7 @@ fieldset {
 .checkout-wizard-content fieldset > div {
 	margin-left : 65px;
 	font-size : 1em;
+	padding-bottom: 30px;
 }
 
 .checkout-wizard-content fieldset > div > span {
@@ -1106,7 +1112,39 @@ fieldset {
     font-family: Arial Black;
     background: #000;
     padding: 9px;
+    border-radius : 5px;
+}
+
+#profile {
+	font-size: 0.8em;
+    font-family: Arial;
+    font-weight: bolder;
+    margin-top: 25px;
+}
+
+#profile img {
+	border: 3px solid #ff4d00;
     border-radius: 10px;
+    border: 3px solid #ff4d00;
+    border-radius: 10px;
+    width : 65px;
+    height: 65px;
+    margin-bottom: 4px;
+}
+
+#profile input {
+	position: relative;
+    top: -2px;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    background: #ff4d00;
+    color: white;
+    padding: 0px;
+    width: 95px;
+    font-family: Tahoma;
+    font-size: 13px;
+    font-weight : normal;
+    margin-left: 15px;
 }
 
 .easyWizardSteps {list-style:none;width:auto;margin:0;padding:0;text-align:center;}
@@ -1128,13 +1166,12 @@ fieldset {
     cursor: pointer;
     width: 80px;
     border-radius: 2px;
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     border: 2px solid #fff;
     border-radius: 5px;
     background: #ff4d00;
     color: white;
-    padding: 9px;
+    padding: 7px;
     width : 100px;
     font-family: Tahoma;
     font-size: 16px;
@@ -1146,13 +1183,12 @@ fieldset {
    cursor: pointer;
 	width : 80px;
 	border-radius : 2px;
-	margin-top : 15px;
-	margin-bottom : 10px;
+	margin-bottom : 20px;
 	border: 2px solid #fff;
     border-radius: 5px;
     background: #ff4d00;
     color: white;
-    padding: 9px;
+    padding: 7px;
     width : 100px;
     font-family: Tahoma;
     font-size: 16px;
