improving the project.

--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1041,7 +1041,7 @@ fieldset {
 }
 
 .checkout-wizard-content fieldset > div {
-	margin-left : 65px;
+	margin-left : 30px;
 	font-size : 1em;
 	padding-bottom: 30px;
 }
@@ -1119,6 +1119,7 @@ fieldset {
     font-family: Arial;
     font-weight: bolder;
     margin-top: 25px;
+    display : none;
 }
 
 #profile img {
