--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -472,6 +472,7 @@ h3.title{
     white-space: nowrap;
     font-weight: bold;
     text-transform : uppercase;
+    font-family : Exo;
 }
 
 h3 .fa {
@@ -541,7 +542,7 @@ fieldset {
     border-radius : 10px;
 }
 .about-main fieldset div p{
-    font-size: 1em;
+    font-size: 1.1em;
     font-weight: bold;
     line-height: 1.7em;
 }
@@ -636,6 +637,11 @@ fieldset {
 .menu1 {
     position: relative;
 }
+
+.book_table > p {
+	font-family : Exo;
+}
+
 .book_table form{
 	margin: 2.5em auto auto;
     padding-left: 2em;
@@ -650,6 +656,7 @@ fieldset {
     padding: 5px;
     padding-top: 8px;
     padding-left: 2px;
+    font-family : Exo;
 }
 .book_table input[type="text"],select,.book_table input[type="email"],.book_table textarea,.book_table input[type="time"]{
 	outline:none;
@@ -722,6 +729,10 @@ fieldset {
 	min-height : 990px;
 	background-color: #ff3d00;
 	color : #111;
+}
+
+.shopping > p {
+	font-family : Exo;
 }
 
 .shopping p {
@@ -1022,6 +1033,7 @@ fieldset {
 #checkout-wizard fieldset > h3 {
 	margin-top: 15px;
     margin-left: 1px;
+    font-family: Exo;
 }
 
 .checkout-wizard-content {
@@ -1089,7 +1101,7 @@ fieldset {
     display: inline-block;
     color: #ff8d00;
     font-size: 1.4em;
-    font-family: Tahoma;
+    font-family: Exo;
     font-weight: bold;
     position: relative;
     left: 4px;
@@ -1150,7 +1162,7 @@ fieldset {
     padding: 15px;
     color: #151514;
     margin-right: 0px;
-    font-family: Tahoma;
+    font-family: Exo;
 }
 .easyWizardSteps li.current {color:#ff8d00;font-size: 1.5em;}
 .easyWizardButtons {overflow:hidden;}
