--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1004,6 +1004,7 @@ fieldset {
 
 #checkout-wizard {
 	width : 100%;
+	height : 100%;
 	position: absolute;
 	margin-top : 15px;
 	z-index : 9999999;
