--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -530,6 +530,7 @@ fieldset {
     margin-bottom: 1em;
     border: 1px solid #ff4d00;
     background: #fdfdfd url(../images/white_paperboard.jpg);
+    box-shadow: inset 0 0 0 16px #FF5722, inset 0 0 0 17px #ffa709, inset 0 0 0 18px #FF5722, inset 0 0 0 19px #ffa709, inset 0 0 0 20px #FF5722, inset 0 0 0 21px #ffa709;
 }
 
 .about-main fieldset div{ 
@@ -667,7 +668,7 @@ fieldset {
 	-moz-border-radius: 5px;
 	-o-border-radius: 5px;
 	-ms-border-radius: 5px;
-	font-family : Tahoma;
+	font-family : Exo;
 }
 .book_table input[type="time"]{
 	line-height: 17px;
@@ -707,7 +708,7 @@ fieldset {
 	-ms-transition:.5s all;
 	border: 2px solid;
 	height : auto;
-	font-family : Tahoma;
+	font-family : Exo;
 }
 
 .book_table input[type="submit"]:hover {
@@ -715,6 +716,8 @@ fieldset {
 	color:#fff;
 	border : 2px solid;
 }
+
+
 /*-- //reserve --*/
 
 /* commande */
@@ -1044,7 +1047,6 @@ fieldset {
 	text-align: left;
     font-size: 1em;
     margin: 22px;
-    margin-bottom: 16px;
 }
 
 .checkout-wizard-content fieldset > div {
@@ -1055,6 +1057,8 @@ fieldset {
 
 .checkout-wizard-content fieldset > div > span {
 	line-height : 2em;
+	width : 100%;
+	display : block;
 }
 
 
@@ -1063,12 +1067,13 @@ fieldset {
 }
 
 .checkout-wizard-content fieldset label{
-	font-size: 0.85em;
+	font-size: 0.9em;
     position: relative;
     top: -1px;
-    font-family: Arial;
+    font-family: Exo;
     letter-spacing: 0;
     color: #903417;
+    width: 165px;
 }
 
 
@@ -1078,7 +1083,7 @@ fieldset {
 	min-height : 440px;
 	width : 100%;
 	position: relative;
-    top: 0px;
+    top: -5px;
     background : #fcf8e3;
 	box-shadow: 
 		inset 0 0 0 16px #fff, 
@@ -1105,20 +1110,19 @@ fieldset {
 
 
 .wizard-close {
-	text-transform: uppercase;
-    float: right;
-    display: inline-block;
+	float: right;
     color: #fff;
     font-size: 20px;
     font-weight: 500;
-    line-height: 15px;
-    position : relative;
+    line-height: 13px;
+    position: relative;
+    top: 0px;
     right: 15px;
     cursor: pointer;
     font-family: Arial Black;
     background: #000;
     padding: 9px;
-    border-radius : 5px;
+    border-radius: 5px;
 }
 
 #profile {
@@ -1147,8 +1151,8 @@ fieldset {
     background: #ff4d00;
     color: white;
     padding: 0px;
-    width: 95px;
-    font-family: Tahoma;
+    width: 100px;
+    font-family: Exo;
     font-size: 13px;
     font-weight : normal;
     margin-left: 15px;
@@ -1180,8 +1184,8 @@ fieldset {
     color: white;
     padding: 7px;
     width : 100px;
-    font-family: Tahoma;
-    font-size: 16px;
+   font-family: Exo;
+    font-size: 15px;
 } 
 .easyWizardButtons .next, .easyWizardButtons .submit {
    float:right;
@@ -1197,10 +1201,15 @@ fieldset {
     color: white;
     padding: 7px;
     width : 100px;
-    font-family: Tahoma;
-    font-size: 16px;
+    font-family: Exo;
+    font-size: 15px;
 }
 
+.easyWizardButtons .prev:hover,.easyWizardButtons .next:hover,.easyWizardButtons .submit:hover {
+    background:#111;
+	color:#fff;
+	border : 2px solid;
+}
 
 /* commande */
 
@@ -1276,7 +1285,7 @@ fieldset {
 	float: left;
 	border-radius: 5px;
 	border : 2px solid #ff4d00;
-	font-family : Tahoma;
+	font-family : Exo;
 }
 
 .mail-sub input[type="submit"]{
@@ -1296,7 +1305,7 @@ fieldset {
 	-ms-transition: .5s all;
 	height : auto;
 	border : 2px solid;
-	font-family : Tahoma;
+	font-family : Exo;
 }
 .mail-sub input[type="submit"]:hover{
 	background: #111;
