improving the project.

--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -368,6 +368,10 @@ a.rm-viewdetails:hover,
     border-radius : 5px;
 }
 
+.rm-close:hover {
+	background: #ff4d00;
+}
+
 .rm-close-modal {
 	cursor: pointer;
 	right: 21px;
