--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -357,19 +357,15 @@ a.rm-viewdetails:hover,
 	color: #fff;
 	font-size: 20px;
 	font-weight: 500;
-	line-height: 15px;
 	top: -40px;
 	opacity: 0;
 	right: -1px;
 	cursor: pointer;
 	font-family : Arial Black;
 	background: #000;
-    padding: 9px;
-    border-radius : 5px;
-}
-
-.rm-close:hover {
-	background: #ff4d00;
+    width : 32px;
+    height : 32px;
+    background : url("../images/close.png");
 }
 
 .rm-close-modal {
