improving the project.

--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -283,6 +283,7 @@ a:focus {
     border: 2px solid #fff;
     border-radius: 38px;
     background: #ff3d00;
+    font-weight : bold;
 }
 
 .banner-left{
@@ -708,14 +709,10 @@ fieldset {
 	outline:none;
 	border:none;
 	border-radius:5px;
-	transition:.5s all;
-	-webkit-transition:.5s all;
-	-moz-transition:.5s all;
-	-o-transition:.5s all;
-	-ms-transition:.5s all;
 	border: 2px solid;
 	height : auto;
 	font-family : Exo;
+	font-weight : bold;
 }
 
 .book_table input[type="submit"]:hover {
@@ -1457,14 +1454,10 @@ div#or {
 	border: none;
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
-	transition: .5s all;
-	-webkit-transition: .5s all;
-	-moz-transition: .5s all;
-	-o-transition: .5s all;
-	-ms-transition: .5s all;
 	height : auto;
 	border : 2px solid;
 	font-family : Exo;
+	font-weight : bold;
 }
 .mail-sub input[type="submit"]:hover{
 	background: #111;
