--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -259,6 +259,7 @@ a:focus {
     margin-left: -160px;
     font-weight: bold;
     font-style: italic;
+    text-shadow: 0 1px rgb(255, 255, 255);
 }
 
 .banner-right a h4{
@@ -268,6 +269,7 @@ a:focus {
     margin-top: 18px;
     font-weight: bold;
     font-style: italic;
+    text-shadow: 0 1px rgb(255, 255, 255);
 }
 
 .banner-right a.scroll {
@@ -495,6 +497,7 @@ h3.title{
     font-weight: bold;
     text-transform : uppercase;
     font-family : Exo;
+    text-shadow: 0 1px rgb(255, 255, 255);
 }
 
 h3 .fa {
@@ -784,7 +787,7 @@ fieldset {
 .shoppingCart summary{
       padding:12px 16px 14px 4px;
       overflow:hidden;
-      background:#ffa709;
+      background:#FFC107;
 }
 
 .shoppingCart > div:first-of-type {
@@ -794,8 +797,9 @@ fieldset {
     float: left;
     color: #fff;
     cursor: pointer;
-    font-family: Arial Black;
-    font-size: 1em;
+    font-family: Exo;
+    font-weight: bold;
+    font-size: 1.2em;
 }
 .shoppingCart:hover h4{
        color:#fff;
@@ -989,9 +993,9 @@ fieldset {
 
 .checkout {
 	display: block;
-    color: #fff;
+    color: #FF5722;
     text-decoration: none;
-    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+    text-shadow: 0 1px rgba(93, 6, 6, 0.3);
     height: 37px;
     width: 102px;
     margin-top: 0px;
@@ -999,12 +1003,10 @@ fieldset {
     padding-left: 10px;
     padding-right: 10px;
     line-height: 16px;
-    background: #ffa709;
+    background: #FFC107;
     font-family: Exo;
     font-weight: bold;
-    font-size: 16px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
+    font-size: 15px;
     border-radius: 4px;
     cursor: pointer;
     border: 2px solid #fff;
