improving the project.

--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -168,7 +168,7 @@ a.rm-button-open,
 }
 
 a.rm-button-open {
-	color: #000;	
+	color: #3a0b03;	
 	font-size: 27px;
 	line-height: 45px;
 	margin: 10px auto;
