--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1060,7 +1060,7 @@ fieldset {
     margin-left: auto;
     margin-right: auto;
     width: 82%;
-    background: #fff;
+    background: #fcf8e3;
     padding: 10px;
     border: 1px solid rgba(0, 0, 0, .2);
     border-radius: 6px;
