improving the project.

--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -346,6 +346,7 @@ a.rm-viewdetails,
     padding: 6px;
     color: #fff;
     font-size: 13px;
+    font-weight : bold;
     border-radius: 5px;
     width: auto;
     height: 32px;
