--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -168,18 +168,19 @@ a.rm-button-open,
 }
 
 a.rm-button-open {
-	color: #3a0b03;	
-	font-size: 27px;
-	line-height: 45px;
-	margin: 10px auto;
-	display: block;
-	font-weight : normal;
-	text-shadow: 0 1px 0 rgba(255,255,255,0.8);
-	background: #ff4d00;
+	color: #3a0b03;
+    font-size: 27px;
+    line-height: 45px;
+    margin: 10px auto;
+    display: block;
+    font-weight: normal;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.8);
+    background: #ff4d00;
     background-size: cover;
     border-radius: 50%;
-    padding: 1.5em 2em;
-    font-family : Exo;
+    padding: 2.5em 0em;
+    width: 77%;
+    font-family: Exo;
 }
 
 a.rm-button-open:hover {
